# crab-scheme

./: .gitignore  Cargo.toml  LICENSE  build.rs  wrapper.h
libMLIRScheme/: CMakeLists.txt
libMLIRScheme/include/: CMakeLists.txt
libMLIRScheme/include/Scheme/: CMakeLists.txt  SchemeAttrs.hpp  SchemeAttrs.td  SchemeDialect.hpp  SchemeDialect.td  SchemeOps.hpp  SchemeOps.td  SchemeTypes.hpp  SchemeTypes.td  mlir-tblgen
libMLIRScheme/include/Scheme-c/: Dialects.h
libMLIRScheme/lib/: CMakeLists.txt
libMLIRScheme/lib/CAPI/: CMakeLists.txt  Dialects.cpp
libMLIRScheme/lib/Scheme/: CMakeLists.txt  SchemeAttrs.cpp  SchemeDialect.cpp  SchemeOps.cpp  SchemeTypes.cpp
src/: lib.rs
src/codegen/: mod.rs  runtime.rs  tags.rs
src/codegen/stdlib/: gcdata.ll  gcdata.s  pair.ll  pair.s
src/ir/: control.rs  mod.rs  node.rs  ops.rs  proc.rs  query.rs  types.rs  var.rs
src/ir_gen/: build_body.rs  build_defs.rs  build_exprs.rs  build_primitives.rs  build_program.rs  build_tree.rs  mod.rs  scope.rs  translate.rs
src/mlir/: mod.rs
src/parser/: data.rs  defs.rs  exprs.rs  idents.rs  mod.rs  numbers.rs  programs.rs
test_data/: fft.ss
tests/: parser.rs
