[package]
name = "crab-scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
num = "0.4.0"
slotmap = "1.0.6"
string_cache = "0.8.7"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[dev-dependencies]
paste = "1.0.12"

[lib]
path = "src/lib.rs"

[[bin]]
name = "crab-scheme"

[build-dependencies]
string_cache_codegen = "0.5.2"
