[package]
name = "crab-scheme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
nom_locate = "4.1.0"
num = "0.4.0"
slotmap = "1.0.6"
string_cache = "0.8.7"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
# inkwell = { version="0.1.1", features = ["llvm15-0-no-llvm-linking", "target-all"] }
melior = "0.3.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "crab-scheme"

[build-dependencies]
cmake = "0.1.50"
string_cache_codegen = "0.5.2"
bindgen = "0.64.0"

[patch.crates-io]
melior = { path = "../melior" }

